// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateFilter: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;

exports[`CreateFilter: Component should render correctly with loader 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;
